# grfcodec

./: .gitignore  .hgignore  0compile.txt  CHANGELOG.txt  CMakeLists.txt  COPYING  CPackProperties.cmake.in  Changelog  ExpandingArray.h  IDs.cpp  Makefile  Makefile.bundle  Makefile.common  Makefile.dep  Makefile.local.sample  Makefile.setup  Makefile.vc  Makefile.vc.local.sample  Makefile.win  README.RPN.txt  README.txt  SANITY.txt  TODO.txt  act0.cpp  act123.cpp  act123.h  act123_classes.cpp  act14.cpp  act5.cpp  act6.cpp  act79D.cpp  actB.cpp  actF.cpp  allocarray.h  changelog.txt  checklang.pl  command.cpp  command.h  data.cpp  data.h  (+82 more)
.github/workflows/: ci-build.yml  commit-checker.yml  release.yml  upload-cdn.yml
doc/: AUTO_CORRECT.cz.txt  AUTO_CORRECT.en.txt  COMMANDS.cz.txt  COMMANDS.en.txt  README.RPN.cz.txt  README.RPN.en.txt  README.cz.txt  README.en.txt  SANITY.cz.txt  SANITY.en.txt  nforenum.1  sanity.en.txt
docs/: CMakeLists.txt  auto_correct.txt  commands.cz.txt  commands.en.txt  commands.txt  grf.txt  grfcodec.1  grfcodec.txt  grfdiff.1  grfid.1  grfmerge.1  grfstrip.1  grftut.txt  nforenum.1  nforenum.txt  readme.cz.txt  readme.en.txt  readme.md  readme.txt  sanity.cz.txt  sanity.txt  todo.txt
lang/: 0translate.txt  all_extra.h  all_help.h  all_messages.h  extra_czech.h  extra_english.h  help_czech.h  help_english.h  language_list.h  message_czech.h  message_english.h
pals/: tt1_mars.bcp  ttd_cand.bcp  ttw_cand.bcp
src/: CMakeLists.txt  ExpandingArray.h  IDs.cpp  act0.cpp  act0.h  act123.cpp  act123.h  act123_classes.cpp  act14.cpp  act5.cpp  act6.cpp  act79D.cpp  actB.cpp  actF.cpp  allocarray.h  command.cpp  command.h  conv.h  data.cpp  data.h  endian_check.cpp  error.cpp  error.h  escapes.h  file.cc  file.cpp  file.h  getopt.cpp  getopt.h  globals.cpp  globals.h  grfcodec.cc  grfcodec.cpp  grfcomm.cpp  grfcomm.h  grfdiff.cc  grfdiff.cpp  grfid.c  grfid.cpp  grfmerge.c  (+59 more)
src/lang/: 0translate.txt  all_extra.h  all_help.h  all_messages.h  checklang.pl  extra_czech.h  extra_english.h  help_czech.h  help_english.h  language_list.h  message_czech.h  message_english.h
src/msvc/: CMakeLists.txt  getopt.cpp  getopt.h
src/pals/: tt1_norm.bcp  ttw_pb_pal1.bcp  ttw_pb_pal2.bcp
